--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,17 +13,7 @@ dependencies:
   path: ^1.9.0
   path_provider: ^2.1.3
   qr_flutter: ^4.1.0
-  qr_code_scanner: ^1.0.1
+  mobile_scanner: ^6.0.3
   intl: ^0.19.0
   csv: ^5.0.2
   share_plus: ^10.0.2
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^4.0.0
-
-flutter:
-  uses-material-design: true
-  assets:
-    - assets/logo.png
